[package]
name = "cli_news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "This is an Rust Application"
license = "MIT"
authors =["Rocky Essel"]

[dependencies]
colour = "0.6.0"
crossterm = "0.25.0"
dotenv = "0.15.0"
news_api = { path = "./news_api"}
termimad = "0.20.6"
